Lab2_final/grammar.output
Terminals unused in grammar

   K_DO
   K_ELIF
   EOFILE


Rules useless in parser due to conflicts

   84 job_param_deadline: COMMA K_DEADLINE ASSIGN expression

   88 array_num: LS expression array_num_items RS

   90 array_num_items: COMMA expression array_num_items


State 65 conflicts: 1 shift/reduce
State 221 conflicts: 1 reduce/reduce
State 246 conflicts: 1 reduce/reduce
State 256 conflicts: 1 reduce/reduce


Grammar

    0 $accept: statements $end

    1 statements: statement statements
    2           | epsilon

    3 statement: assign_statement
    4          | K_IF LP bool_returning_statements RP LB statements RB K_ELSE LB statements RB
    5          | K_WHILE LP bool_returning_statements RP LB statements RB
    6          | K_BEGIN statements K_END
    7          | K_FOR LP assign_statements SEMI bool_returning_statements SEMI bool_returning_statements RP LB statements RB
    8          | ID DOT function_call_1
    9          | function_call_2

   10 function_call_1: K_IS_RUNNING LP RP
   11                | K_SUBMIT_JOBS LP INT RP
   12                | K_SUBMIT_JOBS LP array_num RP
   13                | K_GET_CLOCK_SPEED LP RP
   14                | K_GET_AVAILABLE_MEMORY LP RP
   15                | K_GET_MEMORY LP RP

   16 function_call_2: K_RUN LP ID RP
   17                | K_RUN LP array_id RP
   18                | K_DISCARD_JOB LP INT RP

   19 bool_returning_statements: bool_returning_statement L_AND bool_returning_statements
   20                          | bool_returning_statement L_OR bool_returning_statements
   21                          | L_NOT bool_returning_statements
   22                          | LP bool_returning_statements RP
   23                          | bool_returning_statement

   24 bool_returning_statement: expression

   25 assign_statements: assign_statement COMMA assign_statements
   26                  | assign_statement
   27                  | epsilon

   28 assign_statement: ID ASSIGN expression
   29                 | ID LS INT RS ASSIGN expression
   30                 | ID ASSIGN constructors
   31                 | ID LS INT RS ASSIGN constructors

   32 expression: term_prime RELOP expression
   33           | term_prime

   34 term_prime: term PLUS term_prime
   35           | term MINUS term_prime
   36           | term

   37 term: factor MULT term
   38     | factor DIV term
   39     | factor

   40 factor: factor_prime

   41 factor_prime: ID DOT function_call_1
   42             | LP expression RP
   43             | INT
   44             | FLOAT
   45             | STRING
   46             | function_call_2

   47 constructors: K_PROCESSOR LP processor_params RP
   48             | K_LINK LP link_params RP
   49             | K_MEMORY LP memory_params RP
   50             | K_JOB LP job_params RP
   51             | K_CLUSTER LP cluster_params RP

   52 processor_params: processor_param_isa processor_param_clock_speed processor_param_l1_memory processor_param_l2_memory

   53 link_params: link_param_start_point link_param_end_point link_param_bandwidth link_param_channel_capacity link_param_name

   54 memory_params: memory_param_memory_type memory_param_mem_size memory_param_name

   55 job_params: job_param_job_id job_param_flops_required job_param_deadline job_param_mem_required job_param_affinity

   56 cluster_params: cluster_param_processors cluster_param_topology cluster_param_link_bandwidth cluster_param_link_capacity cluster_param_name

   57 processor_param_isa: K_ISA ASSIGN ISA_values

   58 ISA_values: K_ARM
   59           | K_AMD
   60           | K_CDC
   61           | K_MIPS

   62 processor_param_clock_speed: COMMA K_CLOCK_SPEED COLON expression

   63 processor_param_l1_memory: COMMA K_L1_MEMORY ASSIGN ID
   64                          | COMMA K_L1_MEMORY ASSIGN K_MEMORY LP memory_params RP

   65 processor_param_l2_memory: COMMA K_L2_MEMORY ASSIGN ID
   66                          | COMMA K_L2_MEMORY ASSIGN K_MEMORY LP memory_params RP
   67                          | epsilon

   68 link_param_start_point: K_START_POINT ASSIGN STRING

   69 link_param_end_point: COMMA K_END_POINT ASSIGN STRING

   70 link_param_bandwidth: COMMA K_BANDWIDTH ASSIGN expression

   71 link_param_channel_capacity: COMMA K_CHANNEL_CAPACITY ASSIGN expression

   72 link_param_name: COMMA K_NAME ASSIGN STRING
   73                | epsilon

   74 memory_param_memory_type: K_MEMORY_TYPE ASSIGN memory_type_values

   75 memory_param_mem_size: COMMA K_MEM_SIZE ASSIGN expression

   76 memory_param_name: COMMA K_NAME ASSIGN STRING
   77                  | epsilon

   78 memory_type_values: K_PRIMARY
   79                   | K_SECONDARY
   80                   | K_CACHE

   81 job_param_job_id: K_JOB_ID ASSIGN expression

   82 job_param_flops_required: COMMA K_FLOPS_REQUIRED ASSIGN expression

   83 job_param_deadline: COMMA K_DEADLINE ASSIGN expression
   84                   | COMMA K_DEADLINE ASSIGN expression

   85 job_param_mem_required: COMMA K_MEM_REQUIRED ASSIGN expression

   86 job_param_affinity: COMMA K_AFFINITY ASSIGN array_num

   87 array_num: LS expression array_num_items RS
   88          | LS expression array_num_items RS

   89 array_num_items: COMMA expression array_num_items
   90                | COMMA expression array_num_items
   91                | epsilon

   92 cluster_param_processors: K_PROCESSORS ASSIGN array_id

   93 cluster_param_topology: COMMA K_TOPOLOGY ASSIGN STRING

   94 cluster_param_link_bandwidth: COMMA K_LINK_BANDWIDTH ASSIGN expression

   95 cluster_param_link_capacity: COMMA K_LINK_CAPACITY ASSIGN expression

   96 cluster_param_name: COMMA K_NAME ASSIGN STRING
   97                   | epsilon

   98 array_id: LS ID array_id_items RS

   99 array_id_items: COMMA ID array_id_items
  100               | epsilon

  101 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
K_IF (1) 4
K_ELSE (2) 4
K_WHILE (3) 5
K_DO (4)
K_ELIF (5)
K_FOR (6) 7
K_BEGIN (7) 6
K_END (8) 6
K_PROCESSOR (9) 47
K_ISA (10) 57
K_CLOCK_SPEED (11) 62
K_L1_MEMORY (12) 63 64
K_L2_MEMORY (13) 65 66
K_IS_RUNNING (14) 10
K_SUBMIT_JOBS (15) 11 12
K_GET_CLOCK_SPEED (16) 13
K_RUN (17) 16 17
K_DISCARD_JOB (18) 18
K_ARM (19) 58
K_AMD (20) 59
K_CDC (21) 60
K_MIPS (22) 61
K_LINK (23) 48
K_START_POINT (24) 68
K_END_POINT (25) 69
K_BANDWIDTH (26) 70
K_CHANNEL_CAPACITY (27) 71
K_MEMORY (28) 49 64 66
K_MEMORY_TYPE (29) 74
K_MEM_SIZE (30) 75
K_GET_AVAILABLE_MEMORY (31) 14
K_JOB (32) 50
K_JOB_ID (33) 81
K_FLOPS_REQUIRED (34) 82
K_DEADLINE (35) 83 84
K_MEM_REQUIRED (36) 85
K_AFFINITY (37) 86
K_GET_MEMORY (38) 15
K_CLUSTER (39) 51
K_PROCESSORS (40) 92
K_TOPOLOGY (41) 93
K_LINK_BANDWIDTH (42) 94
K_LINK_CAPACITY (43) 95
K_NAME (44) 72 76 96
ID (45) 8 16 28 29 30 31 41 63 65 98 99
INT (46) 11 18 29 31 43
FLOAT (47) 44
LP (48) 4 5 7 10 11 12 13 14 15 16 17 18 22 42 47 48 49 50 51 64 66
RP (49) 4 5 7 10 11 12 13 14 15 16 17 18 22 42 47 48 49 50 51 64 66
LB (50) 4 5 7
RB (51) 4 5 7
STRING (52) 45 68 69 72 76 93 96
LS (53) 29 31 87 88 98
RS (54) 29 31 87 88 98
PLUS (55) 34
MINUS (56) 35
MULT (57) 37
DIV (58) 38
RELOP (59) 32
COMMA (60) 25 62 63 64 65 66 69 70 71 72 75 76 82 83 84 85 86 89 90
    93 94 95 96 99
SEMI (61) 7
COLON (62) 62
ASSIGN (63) 28 29 30 31 57 63 64 65 66 68 69 70 71 72 74 75 76 81 82
    83 84 85 86 92 93 94 95 96
L_AND (64) 19
L_OR (65) 20
L_NOT (66) 21
DOT (67) 8 41
EOFILE (68)
K_CACHE (69) 80
K_PRIMARY (70) 78
K_SECONDARY (71) 79
error (256)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
statements (75)
    on left: 1 2, on right: 0 1 4 5 6 7
statement (76)
    on left: 3 4 5 6 7 8 9, on right: 1
function_call_1 (77)
    on left: 10 11 12 13 14 15, on right: 8 41
function_call_2 (78)
    on left: 16 17 18, on right: 9 46
bool_returning_statements (79)
    on left: 19 20 21 22 23, on right: 4 5 7 19 20 21 22
bool_returning_statement (80)
    on left: 24, on right: 19 20 23
assign_statements (81)
    on left: 25 26 27, on right: 7 25
assign_statement (82)
    on left: 28 29 30 31, on right: 3 25 26
expression (83)
    on left: 32 33, on right: 24 28 29 32 42 62 70 71 75 81 82 83 84
    85 87 88 89 90 94 95
term_prime (84)
    on left: 34 35 36, on right: 32 33 34 35
term (85)
    on left: 37 38 39, on right: 34 35 36 37 38
factor (86)
    on left: 40, on right: 37 38 39
factor_prime (87)
    on left: 41 42 43 44 45 46, on right: 40
constructors (88)
    on left: 47 48 49 50 51, on right: 30 31
processor_params (89)
    on left: 52, on right: 47
link_params (90)
    on left: 53, on right: 48
memory_params (91)
    on left: 54, on right: 49 64 66
job_params (92)
    on left: 55, on right: 50
cluster_params (93)
    on left: 56, on right: 51
processor_param_isa (94)
    on left: 57, on right: 52
ISA_values (95)
    on left: 58 59 60 61, on right: 57
processor_param_clock_speed (96)
    on left: 62, on right: 52
processor_param_l1_memory (97)
    on left: 63 64, on right: 52
processor_param_l2_memory (98)
    on left: 65 66 67, on right: 52
link_param_start_point (99)
    on left: 68, on right: 53
link_param_end_point (100)
    on left: 69, on right: 53
link_param_bandwidth (101)
    on left: 70, on right: 53
link_param_channel_capacity (102)
    on left: 71, on right: 53
link_param_name (103)
    on left: 72 73, on right: 53
memory_param_memory_type (104)
    on left: 74, on right: 54
memory_param_mem_size (105)
    on left: 75, on right: 54
memory_param_name (106)
    on left: 76 77, on right: 54
memory_type_values (107)
    on left: 78 79 80, on right: 74
job_param_job_id (108)
    on left: 81, on right: 55
job_param_flops_required (109)
    on left: 82, on right: 55
job_param_deadline (110)
    on left: 83 84, on right: 55
job_param_mem_required (111)
    on left: 85, on right: 55
job_param_affinity (112)
    on left: 86, on right: 55
array_num (113)
    on left: 87 88, on right: 12 86
array_num_items (114)
    on left: 89 90 91, on right: 87 88 89 90
cluster_param_processors (115)
    on left: 92, on right: 56
cluster_param_topology (116)
    on left: 93, on right: 56
cluster_param_link_bandwidth (117)
    on left: 94, on right: 56
cluster_param_link_capacity (118)
    on left: 95, on right: 56
cluster_param_name (119)
    on left: 96 97, on right: 56
array_id (120)
    on left: 98, on right: 17 92
array_id_items (121)
    on left: 99 100, on right: 98 99
epsilon (122)
    on left: 101, on right: 2 27 67 73 77 91 97 100


State 0

    0 $accept: . statements $end

    K_IF           shift, and go to state 1
    K_WHILE        shift, and go to state 2
    K_FOR          shift, and go to state 3
    K_BEGIN        shift, and go to state 4
    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 7

    $default  reduce using rule 101 (epsilon)

    statements        go to state 8
    statement         go to state 9
    function_call_2   go to state 10
    assign_statement  go to state 11
    epsilon           go to state 12


State 1

    4 statement: K_IF . LP bool_returning_statements RP LB statements RB K_ELSE LB statements RB

    LP  shift, and go to state 13


State 2

    5 statement: K_WHILE . LP bool_returning_statements RP LB statements RB

    LP  shift, and go to state 14


State 3

    7 statement: K_FOR . LP assign_statements SEMI bool_returning_statements SEMI bool_returning_statements RP LB statements RB

    LP  shift, and go to state 15


State 4

    6 statement: K_BEGIN . statements K_END

    K_IF           shift, and go to state 1
    K_WHILE        shift, and go to state 2
    K_FOR          shift, and go to state 3
    K_BEGIN        shift, and go to state 4
    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 7

    $default  reduce using rule 101 (epsilon)

    statements        go to state 16
    statement         go to state 9
    function_call_2   go to state 10
    assign_statement  go to state 11
    epsilon           go to state 12


State 5

   16 function_call_2: K_RUN . LP ID RP
   17                | K_RUN . LP array_id RP

    LP  shift, and go to state 17


State 6

   18 function_call_2: K_DISCARD_JOB . LP INT RP

    LP  shift, and go to state 18


State 7

    8 statement: ID . DOT function_call_1
   28 assign_statement: ID . ASSIGN expression
   29                 | ID . LS INT RS ASSIGN expression
   30                 | ID . ASSIGN constructors
   31                 | ID . LS INT RS ASSIGN constructors

    LS      shift, and go to state 19
    ASSIGN  shift, and go to state 20
    DOT     shift, and go to state 21


State 8

    0 $accept: statements . $end

    $end  shift, and go to state 22


State 9

    1 statements: statement . statements

    K_IF           shift, and go to state 1
    K_WHILE        shift, and go to state 2
    K_FOR          shift, and go to state 3
    K_BEGIN        shift, and go to state 4
    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 7

    $default  reduce using rule 101 (epsilon)

    statements        go to state 23
    statement         go to state 9
    function_call_2   go to state 10
    assign_statement  go to state 11
    epsilon           go to state 12


State 10

    9 statement: function_call_2 .

    $default  reduce using rule 9 (statement)


State 11

    3 statement: assign_statement .

    $default  reduce using rule 3 (statement)


State 12

    2 statements: epsilon .

    $default  reduce using rule 2 (statements)


State 13

    4 statement: K_IF LP . bool_returning_statements RP LB statements RB K_ELSE LB statements RB

    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 27
    STRING         shift, and go to state 28
    L_NOT          shift, and go to state 29

    function_call_2            go to state 30
    bool_returning_statements  go to state 31
    bool_returning_statement   go to state 32
    expression                 go to state 33
    term_prime                 go to state 34
    term                       go to state 35
    factor                     go to state 36
    factor_prime               go to state 37


State 14

    5 statement: K_WHILE LP . bool_returning_statements RP LB statements RB

    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 27
    STRING         shift, and go to state 28
    L_NOT          shift, and go to state 29

    function_call_2            go to state 30
    bool_returning_statements  go to state 38
    bool_returning_statement   go to state 32
    expression                 go to state 33
    term_prime                 go to state 34
    term                       go to state 35
    factor                     go to state 36
    factor_prime               go to state 37


State 15

    7 statement: K_FOR LP . assign_statements SEMI bool_returning_statements SEMI bool_returning_statements RP LB statements RB

    ID  shift, and go to state 39

    $default  reduce using rule 101 (epsilon)

    assign_statements  go to state 40
    assign_statement   go to state 41
    epsilon            go to state 42


State 16

    6 statement: K_BEGIN statements . K_END

    K_END  shift, and go to state 43


State 17

   16 function_call_2: K_RUN LP . ID RP
   17                | K_RUN LP . array_id RP

    ID  shift, and go to state 44
    LS  shift, and go to state 45

    array_id  go to state 46


State 18

   18 function_call_2: K_DISCARD_JOB LP . INT RP

    INT  shift, and go to state 47


State 19

   29 assign_statement: ID LS . INT RS ASSIGN expression
   31                 | ID LS . INT RS ASSIGN constructors

    INT  shift, and go to state 48


State 20

   28 assign_statement: ID ASSIGN . expression
   30                 | ID ASSIGN . constructors

    K_PROCESSOR    shift, and go to state 49
    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    K_LINK         shift, and go to state 50
    K_MEMORY       shift, and go to state 51
    K_JOB          shift, and go to state 52
    K_CLUSTER      shift, and go to state 53
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 54
    STRING         shift, and go to state 28

    function_call_2  go to state 30
    expression       go to state 55
    term_prime       go to state 34
    term             go to state 35
    factor           go to state 36
    factor_prime     go to state 37
    constructors     go to state 56


State 21

    8 statement: ID DOT . function_call_1

    K_IS_RUNNING            shift, and go to state 57
    K_SUBMIT_JOBS           shift, and go to state 58
    K_GET_CLOCK_SPEED       shift, and go to state 59
    K_GET_AVAILABLE_MEMORY  shift, and go to state 60
    K_GET_MEMORY            shift, and go to state 61

    function_call_1  go to state 62


State 22

    0 $accept: statements $end .

    $default  accept


State 23

    1 statements: statement statements .

    $default  reduce using rule 1 (statements)


State 24

   41 factor_prime: ID . DOT function_call_1

    DOT  shift, and go to state 63


State 25

   43 factor_prime: INT .

    $default  reduce using rule 43 (factor_prime)


State 26

   44 factor_prime: FLOAT .

    $default  reduce using rule 44 (factor_prime)


State 27

   22 bool_returning_statements: LP . bool_returning_statements RP
   42 factor_prime: LP . expression RP

    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 27
    STRING         shift, and go to state 28
    L_NOT          shift, and go to state 29

    function_call_2            go to state 30
    bool_returning_statements  go to state 64
    bool_returning_statement   go to state 32
    expression                 go to state 65
    term_prime                 go to state 34
    term                       go to state 35
    factor                     go to state 36
    factor_prime               go to state 37


State 28

   45 factor_prime: STRING .

    $default  reduce using rule 45 (factor_prime)


State 29

   21 bool_returning_statements: L_NOT . bool_returning_statements

    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 27
    STRING         shift, and go to state 28
    L_NOT          shift, and go to state 29

    function_call_2            go to state 30
    bool_returning_statements  go to state 66
    bool_returning_statement   go to state 32
    expression                 go to state 33
    term_prime                 go to state 34
    term                       go to state 35
    factor                     go to state 36
    factor_prime               go to state 37


State 30

   46 factor_prime: function_call_2 .

    $default  reduce using rule 46 (factor_prime)


State 31

    4 statement: K_IF LP bool_returning_statements . RP LB statements RB K_ELSE LB statements RB

    RP  shift, and go to state 67


State 32

   19 bool_returning_statements: bool_returning_statement . L_AND bool_returning_statements
   20                          | bool_returning_statement . L_OR bool_returning_statements
   23                          | bool_returning_statement .

    L_AND  shift, and go to state 68
    L_OR   shift, and go to state 69

    $default  reduce using rule 23 (bool_returning_statements)


State 33

   24 bool_returning_statement: expression .

    $default  reduce using rule 24 (bool_returning_statement)


State 34

   32 expression: term_prime . RELOP expression
   33           | term_prime .

    RELOP  shift, and go to state 70

    $default  reduce using rule 33 (expression)


State 35

   34 term_prime: term . PLUS term_prime
   35           | term . MINUS term_prime
   36           | term .

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 36 (term_prime)


State 36

   37 term: factor . MULT term
   38     | factor . DIV term
   39     | factor .

    MULT  shift, and go to state 73
    DIV   shift, and go to state 74

    $default  reduce using rule 39 (term)


State 37

   40 factor: factor_prime .

    $default  reduce using rule 40 (factor)


State 38

    5 statement: K_WHILE LP bool_returning_statements . RP LB statements RB

    RP  shift, and go to state 75


State 39

   28 assign_statement: ID . ASSIGN expression
   29                 | ID . LS INT RS ASSIGN expression
   30                 | ID . ASSIGN constructors
   31                 | ID . LS INT RS ASSIGN constructors

    LS      shift, and go to state 19
    ASSIGN  shift, and go to state 20


State 40

    7 statement: K_FOR LP assign_statements . SEMI bool_returning_statements SEMI bool_returning_statements RP LB statements RB

    SEMI  shift, and go to state 76


State 41

   25 assign_statements: assign_statement . COMMA assign_statements
   26                  | assign_statement .

    COMMA  shift, and go to state 77

    $default  reduce using rule 26 (assign_statements)


State 42

   27 assign_statements: epsilon .

    $default  reduce using rule 27 (assign_statements)


State 43

    6 statement: K_BEGIN statements K_END .

    $default  reduce using rule 6 (statement)


State 44

   16 function_call_2: K_RUN LP ID . RP

    RP  shift, and go to state 78


State 45

   98 array_id: LS . ID array_id_items RS

    ID  shift, and go to state 79


State 46

   17 function_call_2: K_RUN LP array_id . RP

    RP  shift, and go to state 80


State 47

   18 function_call_2: K_DISCARD_JOB LP INT . RP

    RP  shift, and go to state 81


State 48

   29 assign_statement: ID LS INT . RS ASSIGN expression
   31                 | ID LS INT . RS ASSIGN constructors

    RS  shift, and go to state 82


State 49

   47 constructors: K_PROCESSOR . LP processor_params RP

    LP  shift, and go to state 83


State 50

   48 constructors: K_LINK . LP link_params RP

    LP  shift, and go to state 84


State 51

   49 constructors: K_MEMORY . LP memory_params RP

    LP  shift, and go to state 85


State 52

   50 constructors: K_JOB . LP job_params RP

    LP  shift, and go to state 86


State 53

   51 constructors: K_CLUSTER . LP cluster_params RP

    LP  shift, and go to state 87


State 54

   42 factor_prime: LP . expression RP

    K_RUN          shift, and go to state 5
    K_DISCARD_JOB  shift, and go to state 6
    ID             shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    LP             shift, and go to state 54
    STRING         shift, and go to state 28

    function_call_2  go to state 30
    expression       go to state 88
    term_prime       go to state 34
    term             go to state 35
    factor           go to state 36
    factor_prime     go to state 37


State 55

   28 assign_statement: ID ASSIGN expression .

    $default  reduce using rule 28 (assign_statement)


State 56

   30 assign_statement: ID ASSIGN constructors .

    $default  reduce using rule 30 (assign_statement)


State 57

   10 function_call_1: K_IS_RUNNING . LP RP

    LP  shift, and go to state 89


State 58

   11 function_call_1: K_SUBMIT_JOBS . LP INT RP
   12                | K_SUBMIT_JOBS . LP array_num RP

    LP  shift, and go to state 90


State 59

   13 function_call_1: K_GET_CLOCK_SPEED . LP RP

    LP  shift, and go to state 91


State 60

   14 function_call_1: K_GET_AVAILABLE_MEMORY . LP RP

    LP  shift, and go to state 92


State 61

   15 function_call_1: K_GET_MEMORY . LP RP

    LP  shift, and go to state 93


State 62

    8 statement: ID DOT function_call_1 .

    $default  reduce using rule 8 (statement)


State 63

   41 factor_prime: ID DOT . function_call_1
